# hexSerial

./: CMakeLists.txt  README.md  SAS_pasport.txt  hexSerial  hexSerial.pro  hexSerial.sh  icons.qrc  itDialog.cpp  itDialog.h  itDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h
